スタイリングと Markdown で画像を扱えるようにした

--- a/src/pages/blog/2020/10/20-01.md
+++ b/src/pages/blog/2020/10/20-01.md
@@ -6,10 +6,12 @@ date : '2020-10-20T00:00:00.000Z'
 # H1
 
 <style>
-code { color: red; }
+code { color: blue; }
 </style>
 
 どうですか_斜体_とか__strong__とか`code`とか。
+
+![画像](./20-01-01.png)
 
 あれ？末尾に改行あるとダメ？んなことないね
 
